[package]
name = "character_converter"
version = "2.1.3"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
description = "Turn Traditional Chinese script ot Simplified Chinese script and vice-versa and tokenize."
repository = "https://github.com/sotch-pr35mac/character_converter"
readme = "README.md"
keywords = ["chinese", "simplified", "traditional", "convert", "hanzi"]
categories = [
  "text-processing",
  "localization",
  "internationalization",
  "value-formatting",
]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
once_cell = "1.5.2"
fst = "0.4"
# rusqlite = { version = "0.28.0", features = ["bundled"] }
# rusqlite = { version = "0.28.0" }

# https://github.com/launchbadge/sqlx/blob/main/examples/sqlite/todos/Cargo.toml
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
anyhow = { version = "1.0.65" }
tokio = { version = "1.21.2", features = ["macros"] }

[build-dependencies]
bincode = "1.2.1"
fst = "0.4"

[features]
bench = []
